--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,49 +1,44 @@
-name: Deploy To Environment
-description: Deploys to a specified environment
-
 on:
   push:
-    paths:
-      - force-app/**
+    branches:
+      - "main"
+name: Deploy to Salesforce Production
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-inputs:
-  validateOnly:
-    description: 'Run the deployment as validation only'
-    type: boolean
-  environmentName:
-    description: 'The name of the environment you are deploying to'
-    type: string
-    required: true
-  sfdx_auth_url:
-    description: 'The auth url tied to your deployment environment'
-    required: true
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "14"
 
-runs:
-  using: 'composite'
-  steps:
-    - name: Install sfdx
-      shell: bash
-      run: |
-        npm install --global sfdx-cli
-        sfdx --version
-    - name: Login to ${{ inputs.environmentName }}
-      shell: bash
-      run: |
-        sfdx org login sfdx-url --set-default --sfdx-url-file <(echo "${{ inputs.sfdx_auth_url }}")
-    - name: Generate package.xml
-      shell: bash
-      run: |
-        sfdx project generate manifest --source-dir force-app --output-dir manifest
-    - name: Deploy to ${{ inputs.environmentName }}
-      shell: bash
-      run: |
-        deployFlags=(
-            --manifest manifest/package.xml
-            --wait 30
-            --test-level RunLocalTests
-            --verbose
-          )
-        if [ "${{ inputs.validateOnly }}" = "true" ]; then
-          deployFlags+=( --dry-run )
-        fi
-        sfdx project deploy start "${deployFlags[@]}"
+      - name: Cache node modules
+        uses: actions/cache@v3
+        id: npm_cache_id
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-cache-
+            ${{ runner.os }}-
+
+      - name: Install Dependencies
+        if: steps.npm_cache_id.outputs.cache-hit != 'true'
+        run: npm ci
+
+      - name: Login to Environment
+        shell: bash
+        run: |
+          sf org login sfdx-url --set-default --sfdx-url-file <(echo "${{ inputs.SFDX_AUTH_URL }}")
+
+      - name: Build, Test & Deploy
+        uses: aabbi/sfdx-deploy@v1
+        env:
+          TARGET_USERNAME: amitabbibed@bedrock.com
+          SOURCE_PATH: force-app
+          DESTRUCTIVE_CHANGES: destructive-changes
+          TEST_LEVEL: RunLocalTests
+          WAIT: 200
