--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -2,64 +2,43 @@ on:
   push:
     branches:
       - "main"
-name: Salesforce Metadata Deploy
-description: Builds and deploys metadata to a specified environment
-author: jawills
-branding:
-  icon: code
-  color: blue
-inputs:
-  DRY_RUN:
-    description: "Validate deploy and run Apex tests but don't save to the org."
-    type: boolean
-  TEST_LEVEL:
-    description: "Deployment Apex testing level."
-    type: choice
-    default: RunLocalTests
-    options:
-      - NoTestRun
-      - RunSpecifiedTests
-      - RunLocalTests
-      - RunAllTestsInOrg
-  WAIT:
-    description: "Number of minutes to wait for command to complete and display results."
-    type: number
-    default: 30
-  SOURCE_DIRECTORY:
-    description: "Path to the local source files to deploy."
-    type: string
-    default: force-app
-  SFDX_AUTH_URL:
-    description: "The auth url tied to your deployment environment"
-    type: string
-    required: true
+name: Deploy to Bedrock Salesforce Production
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-runs:
-  using: "composite"
-  steps:
-    - name: Install Salesforce CLI
-      shell: bash
-      run: |
-        npm install -g @salesforce/cli
-        sf --version
-    - name: Login to Environment
-      shell: bash
-      run: |
-        sf org login sfdx-url --set-default --sfdx-url-file <(echo "${{ inputs.SFDX_AUTH_URL }}")
-    - name: Generate package.xml
-      shell: bash
-      run: |
-        sf project generate manifest --source-dir ${{ inputs.SOURCE_DIRECTORY }} --output-dir manifest       
-    - name: Deploy to Environment
-      shell: bash
-      run: |
-        deployFlags=(
-            --manifest manifest/package.xml
-            --wait ${{ inputs.WAIT }}
-            --test-level ${{ inputs.TEST_LEVEL }}
-            --verbose
-          )
-        if [ "${{ inputs.DRY_RUN }}" = "true" ]; then
-          deployFlags+=( --dry-run )
-        fi
-        sf project deploy start "${deployFlags[@]}"
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "14"
+
+      - name: Cache node modules
+        uses: actions/cache@v3
+        id: npm_cache_id
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-cache-
+            ${{ runner.os }}-
+
+      - name: Install Dependencies
+        if: steps.npm_cache_id.outputs.cache-hit != 'true'
+        run: npm ci
+
+      - name: Login to Environment
+        shell: bash
+        run: |
+          sf org login sfdx-url --set-default --sfdx-url-file <(echo "${{ inputs.SFDX_AUTH_URL }}")
+
+      - name: Build, Test & Deploy
+        uses: gfarb/sfdx-deploy@v1
+        env:
+          TARGET_USERNAME: amitabbibed@bedrock.com
+          SOURCE_PATH: force-app
+          DESTRUCTIVE_CHANGES: destructive-changes
+          TEST_LEVEL: RunLocalTests
+          WAIT: 200
