--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,40 +1,13 @@
-on:
-  push:
-    branches:
-      - "main"
-name: Deploy to Bedrock Salesforce Production
+name: SFDX-CLI Deploy from Repository
+on: [push]
 jobs:
-  deploy:
+  SFDX-CLI-Deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: "14"
-
-      - name: Cache node modules
-        uses: actions/cache@v3
-        id: npm_cache_id
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-cache-
-            ${{ runner.os }}-
-
-      - name: Login to Environment
-        shell: bash
-        run: |
-          sf org login sfdx-url --set-default --sfdx-url-file <(echo "${{ inputs.SFDX_AUTH_URL }}")
-
-      - name: Build, Test & Deploy
-        uses: gfarb/sfdx-deploy@v1
-        env:
-          TARGET_USERNAME: amitabbibed@bedrock.com
-          SOURCE_PATH: force-app
-          DESTRUCTIVE_CHANGES: destructive-changes
-          TEST_LEVEL: RunLocalTests
-          WAIT: 200
+      - run: echo "🐧 GitHub Action running on ${{ runner.os }}"
+      - run: echo "🔎 Retrieving ${{ github.ref }} from ${{ github.repository }}."
+      - uses: actions/checkout@v2
+      - run: npm install sfdx-cli -g
+      - run: echo "${{ secrets.SALESFORCE_JWT_SECRET_KEY }}" > server.key
+      - run: sfdx force:auth:jwt:grant --clientid=${{ secrets.SALESFORCE_CONSUMER_KEY }} --jwtkeyfile=server.key --username=${{ secrets.SALESFORCE_DEVHUB_USERNAME }} --setdefaultdevhubusername
+      - run: sfdx force:source:deploy --manifest=manifest/package.xml --testlevel=RunLocalTests -u ${{ secrets.SALESFORCE_DEVHUB_USERNAME }}
