--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -15,7 +15,7 @@ jobs:
       - name: 'Install PMD'
         run: |
             wget https://github.com/pmd/pmd/releases/download/pmd_releases%2F7.0.0-rc4/pmd-dist-7.0.0-rc4-bin.zip
-            unzip pmd-bin-7.0.0-rc4.zip -d ~
+            unzip pmd-dist-7.0.0-rc4-bin.zip -d ~
             mv ~/pmd-bin-7.0.0-rc4 ~/pmd
             ~/pmd/bin/run.sh pmd --version
       # Run PMD scan
