--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -17,10 +17,10 @@ jobs:
             wget https://github.com/pmd/pmd/releases/download/pmd_releases%2F7.0.0-rc4/pmd-dist-7.0.0-rc4-bin.zip
             unzip pmd-dist-7.0.0-rc4-bin.zip -d ~
             mv ~/pmd-bin-7.0.0-rc4 ~/pmd
-            ~/pmd/bin/./pmd
+            ~/pmd/bin/./pmd pmd --version
       # Run PMD scan
       - name: 'Run PMD scan'
-        run: ~/pmd/bin/ pmd -d force-app -R pmd/ruleset.xml -f text
+        run: ~/pmd/bin/./pmd pmd -d force-app -R pmd/ruleset.xml -f text
       - run: npm install sfdx-cli -g
       - run: echo "${{ secrets.SALESFORCE_JWT_SECRET_KEY }}" > server.key
       - run: sfdx force:auth:jwt:grant --clientid=${{ secrets.SALESFORCE_CONSUMER_KEY }} --jwtkeyfile=server.key --username=${{ secrets.SALESFORCE_DEVHUB_USERNAME }} --setdefaultdevhubusername
