--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -20,7 +20,7 @@ jobs:
             ~/pmd/bin/./pmd pmd --version
       # Run PMD scan
       - name: 'Run PMD scan'
-        run: ~/pmd/bin/./pmd --version pmd -d ./force-app/main/default/classes -R ./pmd/ruleset.xml -f text
+        run: ~/pmd/bin/pmd.bat -d ./force-app/main/default/classes -R ./pmd/ruleset.xml -f text
       - run: npm install sfdx-cli -g
       - run: echo "${{ secrets.SALESFORCE_JWT_SECRET_KEY }}" > server.key
       - run: sfdx force:auth:jwt:grant --clientid=${{ secrets.SALESFORCE_CONSUMER_KEY }} --jwtkeyfile=server.key --username=${{ secrets.SALESFORCE_DEVHUB_USERNAME }} --setdefaultdevhubusername
