--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,6 +12,9 @@ jobs:
       - run: echo "🔎 Retrieving ${{ github.ref }} from ${{ github.repository }}."
       - uses: actions/checkout@v2
       # Install SFDX CLI Scanner
+      - name: Install the SFDX CLI Scanner
+        run: |
+          echo 'y' | sfdx plugins:install @salesforce/sfdx-scanner
       - name: Run SFDX CLI Scanner
         run: |
           sfdx scanner:run -f html -t "force-app" -e "eslint,retire-js,pmd,cpd" -c "Design,Best Practices,Code Style,Performance,Security" --outfile ./reports/scan-reports.html
