--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -14,10 +14,10 @@ jobs:
       # Install SFDX CLI Scanner
       - name: Install the SFDX CLI Scanner
         run: |
-          echo 'y' | sfdx plugins:install @salesforce/sfdx-scanner
+          echo 'y' | sf plugins:install @salesforce/sfdx-scanner
       - name: Run SFDX CLI Scanner
         run: |
-          sfdx scanner:run -f html -t "force-app" -e "eslint,retire-js,pmd,cpd" -c "Design,Best Practices,Code Style,Performance,Security" --outfile ./reports/scan-reports.html
+          sf scanner:run -f html -t "force-app" -e "eslint,retire-js,pmd,cpd" -c "Design,Best Practices,Code Style,Performance,Security" --outfile ./reports/scan-reports.html
       - run: npm install sfdx-cli -g
       - run: echo "${{ secrets.SALESFORCE_JWT_SECRET_KEY }}" > server.key
       - run: sfdx force:auth:jwt:grant --clientid=${{ secrets.SALESFORCE_CONSUMER_KEY }} --jwtkeyfile=server.key --username=${{ secrets.SALESFORCE_DEVHUB_USERNAME }} --setdefaultdevhubusername
