--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,7 +11,9 @@ jobs:
       - run: echo "🐧 GitHub Action running on ${{ runner.os }}"
       - run: echo "🔎 Retrieving ${{ github.ref }} from ${{ github.repository }}."
       - uses: actions/checkout@v2
-      - run: npm install salesforce-cli -g
+      - name: Install the SFDX CLI
+        run: |
+          npm install sfdx-cli --global
       # Install SFDX CLI Scanner
       - name: Install the SFDX CLI Scanner
         run: |
