--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -17,7 +17,7 @@ jobs:
       # Install SFDX CLI Scanner
       - name: Install the SFDX CLI Scanner
         run: |
-          echo 'y' | sf plugins:install @salesforce/sfdx-scanner
+          echo 'y' | sf plugins install @salesforce/sfdx-scanner
       - name: Run SFDX CLI Scanner
         run: |
           sf scanner:run -f html -t "force-app" -e "eslint,retire-js,pmd,cpd" -c "Design,Best Practices,Code Style,Performance,Security" --outfile ./reports/scan-reports.html
