--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,13 +11,10 @@ jobs:
       - run: echo "🐧 GitHub Action running on ${{ runner.os }}"
       - run: echo "🔎 Retrieving ${{ github.ref }} from ${{ github.repository }}."
       - uses: actions/checkout@v2
-      - name: Install the SFDX CLI
+      - name: Install SFDX CLI and Scanner
         run: |
-          npm install sfdx-cli --global
-      # Install SFDX CLI Scanner
-      - name: Install the SFDX CLI Scanner
-        run: |
-          echo 'y' | sf plugins install @salesforce/sfdx-scanner
+          npm install sfdx-cli
+          npx sf plugins install @salesforce/sfdx-scanner
       - name: Run SFDX CLI Scanner
         run: |
           sf scanner:run -f html -t "force-app" -e "eslint,retire-js,pmd,cpd" -c "Design,Best Practices,Code Style,Performance,Security" --outfile ./reports/scan-reports.html
