--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -13,10 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install SFDX CLI and Scanner
         run: |
-          wget https://developer.salesforce.com/media/salesforce-cli/sf/channels/stable/sf-linux-x64.tar.xz
-          mkdir -p ~/cli/sf
-          tar xJf sf-linux-x64.tar.xz -C ~/cli/sf --strip-components 1
-          export PATH=~/cli/sf/bin:$PATH
+          npm install --global @salesforce/cli@latest
           npm install sfdx-cli -g
           sf plugins install @salesforce/sfdx-scanner
       - name: Run SFDX CLI Scanner
