--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install SFDX CLI and Scanner
         run: |
-          npm install --global @salesforce/cli@latest
+          npm install @salesforce/cli --global
           npm install sfdx-cli -g
           sf plugins install @salesforce/sfdx-scanner
       - name: Run SFDX CLI Scanner
